// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Text"
>
  Hello world
</p>
`;

exports[`composition hook should return with Text props 1`] = `
Object {
  "className": "css-1jrn33c css-63it0p css-jwhr8m bb-Box bb-Text",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Text"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<span
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Text"
>
  hello world
</span>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<span
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Text"
>
  Hello world
</span>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<span
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Text"
>
  Hello world
</span>
`;

exports[`theming Text.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<span
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Text"
>
  hello world
</span>
`;
